<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Kids</string>




    <string name="girisBtn">enter</string>
    <string name="karsilamametin">SmArT KiDs StaRtiNg!!!</string>

    <string name="konulartoplama">summation</string>
    <string name="konularcikarma">subtraction</string>
    <string name="konularcarpma">multiplication</string>
    <string name="konularbolme">division</string>
    <string name="konularbuyukkucuk">greater/lesser</string>
    <string name="konulartimechallange">time_challange</string>

    <string name="questionfordivision">Find the right answer for the division.</string>
    <string name="totalquestion">"Total Question: "</string>
    <string name="rightanswers">"Right Answers: "</string>
    <string name="wronganswers">"Wrong Answers: "</string>
    <string name="unanswered">"Unanswered: "</string>
    <string name="totalpoints">"Total Points: "</string>
    <string name="choosedifficulty">Choose Difficulty Level</string>
    <string name="easy">easy</string>
    <string name="moderate">moderate</string>
    <string name="hard">hard</string>
    <string name="testibitir">finish test</string>
    <string name="skor">score</string>
    <string name="sonrakisoru">next question</string>
    <string name="questionformultipication">Find the right answer for the  multiplication.</string>
    <string name="questionforaddition">Find the right answer for the  summation.</string>
    <string name="questionforsubtraction">Find the right answer for the  subtraction.</string>
    <string name="questionforbuyukkucuk">Drag these numbers into Descending order.</string>
    <string name="cevapla">answer</string>
    <string name="questionforritmik">Fill the blank with the correct number.</string>
    <string name="eksilt">decrease</string>
    <string name="artır">increase</string>

    <string name="toplambalon">Total Balloons: </string>
    <string name="patlatilanbalon">Popped Balloons: </string>
    <string name="dogrubalon">Correct Balloons: </string>
    <string name="hatalibalon">Wrong Balloons: </string>
    <string name="tekraroyna">play again</string>
    <string name="basla">start</string>
    <string name="cikis">exit</string>
    <string name="sure">time</string>
    <string name="toasttumsayılarıyerlestir">Drag all the numbers on boxes!</string>
    <string name="toasthicsorucevaplamadın">You have not marked any question yet!</string>
    <string name="exitapp">click to exit</string>
    <string name="totalquestionh">"Question: "</string>
    <string name="rightanswersh">"True: "</string>
    <string name="wronganswersh">"False: "</string>
    <string name="patlatilanbalonh">Balloons: </string>
    <string name="dogrubalonh">Correct: </string>
    <string name="hatalibalonh">Wrong: </string>
    <string name="konularritmik">serials</string>
    <string name="konularbaslik">Funny Math</string>
    <string name="konulartekcift">odd / even </string>
    <string name="basari">Success</string>
    <string name="bolumpuani">Score:</string>
    <string name="simetrysoru">Draw the symmetry of the shape shown on the left side to the right side, according to the axis of symmetry.</string>
    <string name="questionleft">question</string>
    <string name="quittoast">Please click Finish Test to exit!</string>
    <string name="konularsimetry">symmetry</string>
    <string name="disclaimer">Disclaimer
FAIR USE NOTICE. \n The Application of SmartKids may contain copyrighted material (images,gifs, videos etc.) the use of which may not always be specifically authorized by the copyright owner. \n
        This constitutes a “fair use” of any such copyrighted material as we are providing small and insignificant proportion of the works available for math learning (Educational) purposes within the scope of United States Copyright Law, Section 107. \n

All original works belong to their respective owners. This application was established solely for transformative, educational purposes, and no way intends to infringe on the copyrights or business of any individual or corporation. SmartKids do not sell these materials or distribute them, and access to all learning content is completely free of charge.  SmartKids use a comparatively small proportion of the original works and our service does not impinge on the potential market for or value of the works. Furthermore, by using content for instruction, SmartKidsbenefits the entitled parties and their distributors and provides links to where the original content can be purchased in its entirety from legitimate sources.

The appropriate accreditation is given to respective owners. Copying or redistributing any of the copyrighted material on this website is strictly forbidden. \n

If you have a complaint about something or believe your content is being used incorrectly, Please contact with developer. \n

For more information on “fair use”, please refer to: United States Code: Title 17, Section 107, http://www.copyright.gov/title17/92chap1.html#107. \n

For all inquiries please write to salginerdem@gmail.com.</string>
    <string name="rateapp">Please rate this app by tapping this button!\n It would be a great motivation for me to design better apps!!! Thank you!</string>
    <string name="bolumbasari">Success: %</string>
    <string name="backtokonular">back</string>
    <string name="leveldurumu"> points left for the next level! \n Keep Going!</string>
    <string name="levelyetersiz"> You dont have enough points for this level!</string>
    <string name="questionforoddeven">Pop the balloons which has even numbers results!</string>

    <string name="timechallenge">Time Challenge</string>
    <string name="timechallenge_exp">race against time</string>
    <string name="fouroperations">4 Operations</string>
    <string name="fouroperationsexp">lets do 4 operations!</string>
    <string name="twoplayers">Math-ball</string>
    <string name="twoplayersexp">maths and football!</string>
    <string name="mathgames">Mental Games</string>
    <string name="mathgamesexp">play math games!</string>
    <string name="removeads">Remove Ads</string>
    <string name="removeadsexp">enjoy without ads!</string>
    <string name="otherapps">other apps</string>
    <string name="otherappsexp">you will like them!</string>



    <string name="pause">pause</string>
    <string name="go">go</string>
    <string name="level">level</string>
    <string name="leave">want to leave?</string>
    <string name="exit">exit</string>
    <string name="cliktoreturn">return game</string>
    <string name="levelpass">Congratulations! You have succeeded new Level!  \n You can choose new character! </string>
    <string name="comingsoon">Two Players Game is coming soon!</string>
    <string name="disclaim">disclaimer note</string>
    <string name="infotxt">"     "Hello there! Thank you very much for installing and using my application. I hope that with this application you or your child will both be taught and solved the math questions. \n
    I developed the application myself and my 8 year old son for Ege. Ege loved this app and achieved a visible improvement in mathematics lessons! I am sure you or your child will too.
    \n "    " If you like this application, please make comment and give 5 stars! Thank you in advance for the nice comments you will make. \n
    "    " It took me 60 days to prepare Smart Kids. During these 60 days I worked in a very intense tempo and had sleepless nights. Because of huge working and spending time I had to add ads to my application, even if I did not want to. I apologize for the ads and thank you for your understanding. \n
    "    "Very special thanks to my wife Nilay, my colleague Barış and the android application testing guru Volkan and other friends for their support in the process of developing the Smart Kids!
    "    "See you in new applications! I ll be looking forward to see your comments and offers!</string>
    <string name="simetrierror">You have to select correct number of boxes!</string>
    <string name="toplamapuan">Summation Points:</string>
    <string name="cikarmapuan">Subraction Points:</string>
    <string name="carpmapuan">Multiplication Points:</string>
    <string name="bolmepuan">Division Points:</string>
    <string name="simetripuan">Symmetry Points:</string>
    <string name="ritmikpuan">Serials Points:</string>
    <string name="buyukkucukpuan">Greater-Lesser Points:</string>
    <string name="tekciftpuan">Odd/Even Points:</string>
    <string name="timechallengepuan">Time Challenge Points:</string>
    <string name="totalsmartpuan">Total Smart Kids Points:</string>
    <string name="levelsayisi">Your Level:</string>
    <string name="nextlevelpts">Points For Next Level:</string>
    <string name="skortablosu">Score Sheet</string>
    <string name="tebrikler">Congratulations, you win!</string>
    <string name="teselli">You lose, try again!</string>
    <string name="points">Points</string>
    <string name="time">Time</string>
    <string name="draw">Draw :)</string>
    <string name="question">Question</string>
    <string name="twoplayersinfo">Welcome to Smart Kids Two Players \n Find the correct answer as soon as possible!</string>
    <string name="sharebody">Do you trust your math? \n https://play.google.com/store/apps/details?id=com.smartkids.akillicocuklar2</string>
    <string name="sharesub">I have found great Math Application!</string>
    <string name="switchcheck">Please choose at least one Math operator!</string>
    <string name="noadinfo">How about playing Smart Kids without Advertisement?</string>
    <string name="buysmartkidsinfo">You can buy Smart Kids No Ad version!</string>
    <string name="playgamesmassage">Please install Google Play Games to get your scores recorded.</string>
    <string name="filter_title">Smart Kids Math for kids. Math tests, summation, extraction, multiplication, division, 4 operation</string>
    <string name="content_description">header</string>
    <string name="total">total</string>



</resources>